# nd2-utils

./: README.md  README_GUI.md  pyproject.toml
scripts/: check_xarray_attrs.py  test_nd2_api.py  test_xarray_structure.py
src/nd2_utils/: __init__.py  config.py
src/nd2_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nd2_utils/cli/: main.py
src/nd2_utils/core/: signals.py  worker.py
src/nd2_utils/gui/: __init__.py  components.py  dialogs.py  handlers.py  main.py
src/nd2_utils/processors/: __init__.py  export_logic.py  nd2_processor.py  tiff_exporter.py
src/nd2_utils/utils/: __init__.py  dimensions.py  metadata.py  threading.py
tests/: test_processors.py
